--- a/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebarBrand.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebarBrand.razor.css
@@ -1,6 +1,9 @@
 ﻿.hx-sidebar-brand-logo {
 	width: var(--hx-sidebar-brand-logo-width);
 	height: var(--hx-sidebar-brand-logo-height);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .hx-sidebar-brand-shortname {
